# fuzzy-rust

./: Cargo.toml  index.html
src/: lib.rs
src/string_matchers/: damerau_levenshtein.rs  jaro_winkler.rs  jensen_shannon_vector.rs  lcs.rs  levenshtein.rs  ngram.rs  wagner_fischer.rs
