[package]
name = "fuzzy-rust"
version = "0.1.0"
authors = ["Rupert Carr <rupert@oneslipstream.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/rupert648/fuzzy-rust"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
array2d="0.2.1"

